samples/_failures_safe/1761352669_014bf3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_76f443ed.c: In function ‘main’:
./samples/SAFE/__tmp_76f443ed.c:191:12: error: missing terminating " character
  191 |     printf("Tokens
      |            ^~~~~~~
./samples/SAFE/__tmp_76f443ed.c:191:5: error: expected expression at end of input
  191 |     printf("Tokens
      |     ^~~~~~
./samples/SAFE/__tmp_76f443ed.c:191:5: error: expected declaration or statement at end of input
